# sgigantografias

./: .env-example  PyWhatKit_DB.txt  carlykey  carlykey.pub  carlykey1  carlykey1.pub  pyproject.toml  requirements.txt
apps/compras/: admin.py  forms.py  models.py
apps/compras/migrations/: 0001_initial.py  0002_alter_detallecompra_cantidad_and_more.py
apps/empresa/: admin.py  forms.py  models.py
apps/empresa/migrations/: 0001_initial.py  0002_inventario_cantidad.py  0003_alter_inventario_cantidad.py  0004_remove_inventario_cantidad_stockinsumo.py  0005_alter_stockinsumo_cantidad.py
apps/ventas/: admin.py  forms.py  models.py
apps/ventas/migrations/: 0001_initial.py  0002_alter_resultadoanalisis_options_and_more.py  0003_remove_fase_nombre_and_more.py
apps/web/: urls.py  views.py
config/: settings.py  urls.py
static/admin/css/: base.css
static/css/: styleadmin.css
static/css/vertical-layout-light/: estilo.css
static/js/: dashboard.js
templates/: index.html
templates/admin/: base_site.html
templates/pages/: analisis.html  dashboard.html  login.html
templates/pages/clientes/: clientes.html  crear.html  edit.html
templates/pages/compras/: compras.html  crear.html
templates/pages/cotizaciones/: cotizaciones.html  crear.html
templates/pages/facturas/: facturas.html
templates/pages/insumos/: crear.html  edit.html  insumos.html
templates/pages/inventario/: crear.html  inventarios.html
templates/pages/procesos/: edit.html  procesos.html
templates/pages/provedores/: crear.html  edit.html  provedores.html
(+12 files in other folders)
