[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["carlykey <carlyshqholguin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
easygoogletranslate = "*"
google-generativeai = "^0.2.2"
gunicorn = "^21.2.0"
pymysql = "^1.1.0"
python-dotenv = "^0.19.1"
requests = "^2.26.0"
translate = "^3.6.1"
whitenoise = "^5.3.0"
shortuuid = "*"
pywhatkit = "^5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
